--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,26 @@
     <body>
             <div class="game-container">
                 <div class="score-container">
-                    <div class="score-item">
+                    <div class="score-element">
                         level
                         <span id="level">1</span>
                     </div>
-                    <div class="score-item">
+                    <div class="score-element">
                         Total Coins
                         <span id="coins">0</span>
                     </div>
-                    <div class="score-item">
+                    <div class="score-element">
                         Coins Collected This level
                         <span id="currentCoins">0</span>
+                    </div>
+                </div>
+                <div class="board-container">
+                    <div class="tiles-container">
+                        <div class="tile-element">
+                            <!--
+                                Eventually needs to be 25 tile elements
+                            -->
+                        </div>
                     </div>
                 </div>
             </div>
