--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,14 @@
     </head>
     <body>
             <div class="game-container">
-                <div class="score-container">
-                    <div class="score-element">
-                        level
+                <div class="stats-container">
+                    <div class="stats-element">
+                        Level:
                         <span id="level">1</span>
                     </div>
-                    <div class="score-element">
-                        Total Coins
-                        <span id="coins">0</span>
-                    </div>
-                    <div class="score-element">
-                        Coins Collected This level
-                        <span id="currentCoins">0</span>
+                    <div class="stats-element">
+                        Time:
+                        <span id="Time">0</span>
                     </div>
                 </div>
                 <div class="board-container">
@@ -38,6 +34,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="leaderboard-container">
+                    
+                </div>"
             </div>
     </body>
 </html>
