--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
                     </div>
                 </div>
                 <div class="leaderboard-container">
-                    
-                </div>"
+
+                </div>
             </div>
     </body>
 </html>
