--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,11 @@
             <div class="leaderboard-container">
                 
             </div>
+            <div class="control-container">
+                <div id="start-timer">
+
+                </div>
+            </div>
         </div>
     </body>
 </html>
