--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,8 @@
                 
             </div>
             <div class="control-container">
-                <div id="start-timer">
+                
+                <div id="start-timer-button">
 
                 </div>
             </div>
