--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,9 @@
                 
             </div>
             <div class="control-container">
-                
-                <div id="start-timer-button">
-
+                Press start to begin the game!
+                <button type="button" id="start-timer-button">
+                    Start
                 </div>
             </div>
         </div>
