--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,23 @@
                         <!--
                             Eventually needs to be 25 tile elements
                         -->
+                        <div class="tile-front">
+
+                        </div>
+                        <div class="tile-back">
+                            <div class="tile-back-memo0">
+                                0
+                            </div>
+                            <div class="tile-back-memo1">
+                                1
+                            </div>
+                            <div class="tile-back-memo2">
+                                2
+                            </div>
+                            <div class="tile-back-memo3">
+                                3
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
