--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
         <title> Voltorb Flip</title>
 
         <!--
-            Put 3rd-party links here
+            Put style sheet links here
         -->
-
+        <link rel="stylesheet" href="./style.css">
         <!--
             Put script sources here
         -->
