--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,31 @@
                     Start
                 </div>
             </div>
+            
+            <div id="modal-backdrop" class="hidden"></div>
+            <div id="add-name-modal" class="hidden">
+                <div class="modal-dialog">
+                    <div class="modal-header">
+                        <h3>Name</h3>
+                        <button type="button" id="modal-close" class="modal-hide-button">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="name-input-element">
+                            
+                            <label for="name-input">Name</label>
+                            <input type="text" id="name-input" maxlength="3" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" id="modal-cancel" class="modal-hide-button action-button">Cancel</button>
+                        <button type="button" id="modal-accept" class="action-button">Add Time</button>
+                    </div>
+
+                </div>
+            </div>
+
+
+
         </div>
     </body>
 </html>
