--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <!--
             Put script sources here
         -->
-
+        <script src="/index.js" charset="utf-8" defer></script>
     </head>
     <body>
         <div class="game-container">
