--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,14 @@
                 </div>
             </div>
             <div class="leaderboard-container">
-                
+                <div class="leaderboard-header">
+                    <h3>Leaderboard</h3>
+                </div>
+                <div class="leaderboard-contents">
+                    <!-- This is where the templatized leaderboard contents will go -->
+                    <p>LKD 5:43</p>
+                    <p>GAB 7:47</p>
+                </div>
             </div>
             <div class="control-container">
                 Press start to begin the game!
