Fixed a bug with loading the client side javascript

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Voltorb Flip</title>
+        <title>Voltorb Flip</title>
 
         <!--
             Put style sheet links here
@@ -11,7 +11,7 @@
         <!--
             Put script sources here
         -->
-        <script src="/index.js" charset="utf-8" defer></script>
+        <script src="index.js" charset="utf-8" defer></script>
     </head>
     <body>
         <div class="game-container">
