--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="leaderboard-container">
             <div class="leaderboard-header">
-                <h3>Leaderboard</h3>
+                Leaderboard
             </div>
             <div class="leaderboard-contents">
                 <!-- This is where the templatized leaderboard contents will go -->
