--- a/public/index.html
+++ b/public/index.html
@@ -28,30 +28,296 @@
             <div class="board-container">
                 <div class="tiles-container">
                     <div class="tile-element">
-                        <!--
-                            Eventually needs to be 25 tile elements
-                        -->
-                        <div class="tile-front">
-
+                        <div class="tile-front hidden">
+                            <span id="tile-1-front">1</span>
                         </div>
                         <div class="tile-back">
-                            <div class="tile-back-memo0">
-                                0
-                            </div>
-                            <div class="tile-back-memo1">
-                                1
-                            </div>
-                            <div class="tile-back-memo2">
-                                2
-                            </div>
-                            <div class="tile-back-memo3">
-                                3
-                            </div>
+                            <a id="tile-1-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-2-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-2-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-3-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-3-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-4-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-4-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-5-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-5-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-6-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-6-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-7-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-7-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-8-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-8-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-9-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-9-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-10-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-10-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-11-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-11-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-12-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-12-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-13-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-13-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-14-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-14-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-15-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-15-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-16-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-16-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-17-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-17-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-18-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-18-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-19-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-19-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-20-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-20-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-21-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-21-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-22-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-22-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-23-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-23-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-24-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-24-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-25-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-25-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-26-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-26-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-27-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-27-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-28-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-28-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-29-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-29-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-30-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-30-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-31-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-31-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-32-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-32-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-33-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-33-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-34-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-34-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-35-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-35-back" href="#">?</a>
+                        </div>
+                    </div>
+                    <div class="tile-element">
+                        <div class="tile-front hidden">
+                            <span id="tile-36-front">1</span>
+                        </div>
+                        <div class="tile-back">
+                            <a id="tile-36-back" href="#">?</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="control-container">
+            <div class="control-container" id="control-box">
                 Press start to begin the game!
                 <button type="button" id="start-timer-button">
                     Start
