Included basic leaderboard functionality

--- a/public/index.html
+++ b/public/index.html
@@ -324,14 +324,18 @@
                 </div>
             </div>
         </div>
-        <div class="leaderboard-container">
-            <div class="leaderboard-header">
+        <div id="leaderboard-container">
+            <div id="leaderboard-header">
                 Leaderboard
             </div>
-            <div class="leaderboard-contents">
+            <div id="leaderboard-contents">
                 <!-- This is where the templatized leaderboard contents will go -->
-                <p>LKD 5:43</p>
-                <p>GAB 7:47</p>
+                <div class="leaderboard-item">
+                    LKD <span class="leaderboard-time">5:43</span>
+                </div>
+                <div class="leaderboard-item">
+                    GAB <span class="leaderboard-time">7:47</span>
+                </div>
             </div>
         </div>
 
