Added game functionality
hard coded a board and added functions for the game to run properly

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="board-container">
                 <div class="tiles-container">
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-1-front">1</span>
                         </div>
@@ -35,7 +35,7 @@
                             <a id="tile-1-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-2-front">1</span>
                         </div>
@@ -43,31 +43,41 @@
                             <a id="tile-2-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="2">
                         <div class="tile-front hidden">
-                            <span id="tile-3-front">1</span>
+                            <span id="tile-3-front">2</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-3-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="0">
                         <div class="tile-front hidden">
-                            <span id="tile-4-front">1</span>
+                            <span id="tile-4-front">0</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-4-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="0">
                         <div class="tile-front hidden">
-                            <span id="tile-5-front">1</span>
+                            <span id="tile-5-front">0</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-5-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                4
+                            </div>
+                            <div class="info-bombs">
+                                2
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-6-front">1</span>
                         </div>
@@ -75,15 +85,15 @@
                             <a id="tile-6-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="2">
                         <div class="tile-front hidden">
-                            <span id="tile-7-front">1</span>
+                            <span id="tile-7-front">2</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-7-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-8-front">1</span>
                         </div>
@@ -91,7 +101,7 @@
                             <a id="tile-8-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-9-front">1</span>
                         </div>
@@ -99,7 +109,7 @@
                             <a id="tile-9-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-10-front">1</span>
                         </div>
@@ -107,7 +117,17 @@
                             <a id="tile-10-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                6
+                            </div>
+                            <div class="info-bombs">
+                                0
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-11-front">1</span>
                         </div>
@@ -115,7 +135,7 @@
                             <a id="tile-11-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-12-front">1</span>
                         </div>
@@ -123,7 +143,7 @@
                             <a id="tile-12-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-13-front">1</span>
                         </div>
@@ -131,15 +151,15 @@
                             <a id="tile-13-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="2">
                         <div class="tile-front hidden">
-                            <span id="tile-14-front">1</span>
+                            <span id="tile-14-front">2</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-14-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-15-front">1</span>
                         </div>
@@ -147,23 +167,33 @@
                             <a id="tile-15-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                6
+                            </div>
+                            <div class="info-bombs">
+                                0
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tile-element" data-value="0">
                         <div class="tile-front hidden">
-                            <span id="tile-16-front">1</span>
+                            <span id="tile-16-front">0</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-16-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="3">
                         <div class="tile-front hidden">
-                            <span id="tile-17-front">1</span>
+                            <span id="tile-17-front">3</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-17-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-18-front">1</span>
                         </div>
@@ -171,23 +201,33 @@
                             <a id="tile-18-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="0">
                         <div class="tile-front hidden">
-                            <span id="tile-19-front">1</span>
+                            <span id="tile-19-front">0</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-19-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="0">
                         <div class="tile-front hidden">
-                            <span id="tile-20-front">1</span>
+                            <span id="tile-20-front">0</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-20-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                4
+                            </div>
+                            <div class="info-bombs">
+                                3
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-21-front">1</span>
                         </div>
@@ -195,7 +235,7 @@
                             <a id="tile-21-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-22-front">1</span>
                         </div>
@@ -203,15 +243,15 @@
                             <a id="tile-22-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="0">
                         <div class="tile-front hidden">
-                            <span id="tile-23-front">1</span>
+                            <span id="tile-23-front">0</span>
                         </div>
                         <div class="tile-back">
                             <a id="tile-23-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-24-front">1</span>
                         </div>
@@ -219,7 +259,7 @@
                             <a id="tile-24-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
+                    <div class="tile-element" data-value="1">
                         <div class="tile-front hidden">
                             <span id="tile-25-front">1</span>
                         </div>
@@ -227,92 +267,64 @@
                             <a id="tile-25-back" href="#">?</a>
                         </div>
                     </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-26-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-26-back" href="#">?</a>
-                        </div>
-                    </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-27-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-27-back" href="#">?</a>
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                4
+                            </div>
+                            <div class="info-bombs">
+                                1
+                            </div>
                         </div>
                     </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-28-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-28-back" href="#">?</a>
-                        </div>
-                    </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-29-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-29-back" href="#">?</a>
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                4
+                            </div>
+                            <div class="info-bombs">
+                                1
+                            </div>
                         </div>
                     </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-30-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-30-back" href="#">?</a>
-                        </div>
-                    </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-31-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-31-back" href="#">?</a>
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                8
+                            </div>
+                            <div class="info-bombs">
+                                0
+                            </div>
                         </div>
                     </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-32-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-32-back" href="#">?</a>
-                        </div>
-                    </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-33-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-33-back" href="#">?</a>
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                5
+                            </div>
+                            <div class="info-bombs">
+                                1
+                            </div>
                         </div>
                     </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-34-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-34-back" href="#">?</a>
-                        </div>
-                    </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-35-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-35-back" href="#">?</a>
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                4
+                            </div>
+                            <div class="info-bombs">
+                                2
+                            </div>
                         </div>
                     </div>
-                    <div class="tile-element">
-                        <div class="tile-front hidden">
-                            <span id="tile-36-front">1</span>
-                        </div>
-                        <div class="tile-back">
-                            <a id="tile-36-back" href="#">?</a>
+                    <div class="tile-info-element">
+                        <div class="info-content">
+                            <div class="info-points">
+                                3
+                            </div>
+                            <div class="info-bombs">
+                                2
+                            </div>
                         </div>
                     </div>
                 </div>
