Added handlebars, and fetch API

--- a/backup/index.html
+++ b/backup/index.html
@@ -11,6 +11,7 @@
         <!--
             Put script sources here
         -->
+        <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.runtime.js"></script>
         <script src="index.js" charset="utf-8" defer></script>
     </head>
     <body>
@@ -343,10 +344,10 @@
             <div id="leaderboard-contents">
                 <!-- This is where the templatized leaderboard contents will go -->
                 <div class="leaderboard-item">
-                    LKD <span class="leaderboard-time">5:43</span>
+                    <span class="leaderboard-rank">1</span> LKD <span class="leaderboard-time">5:43</span>
                 </div>
                 <div class="leaderboard-item">
-                    GAB <span class="leaderboard-time">7:47</span>
+                    <span class="leaderboard-rank">2</span> GAB <span class="leaderboard-time">7:47</span>
                 </div>
             </div>
         </div>
